--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
     .container {
       position: relative;
-      width: 400px;
+      width: 750px;
       margin: auto;
     }
     .key-part {
@@ -30,7 +30,7 @@
       color: #fff;
       padding: 6px 10px;
       border-radius: 4px;
-      font-size: 14px;
+      font-size: 27px;
       display: none;
       white-space: nowrap;
     }
@@ -45,7 +45,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
       display: none;
       z-index: 1000;
-      width: 350px;
+      width: 750px;
     }
     .modal h2 {
       margin-top: 0;
@@ -68,11 +68,11 @@
     .tab {
       padding: 6px 10px;
       cursor: pointer;
-      border: 1px solid #ccc;
+      border: 10px solid #ccc;
       border-bottom: none;
       background: #eee;
       border-radius: 6px 6px 0 0;
-      font-size: 12px;
+      font-size: 27px;
     }
     .tab.active {
       background: white;
@@ -80,9 +80,9 @@
     }
     .tab-content {
       display: none;
-      max-height: 260px;
+      max-height: 500px;
       overflow-y: auto;
-      font-size: 13px;
+      font-size: 27px;
     }
     .tab-content.active {
       display: block;
@@ -98,7 +98,7 @@
   <img src="tsdex.png" alt="Standard Behavioral index" style="width:100%;">
 
   <!-- S-shaped center (Impulse Components & full system access) -->
-  <div class="key-part" style="top: 80px; left: 140px; width: 120px; height: 120px;" 
+  <div class="key-part" style="top: 240px; left: 240px; width: 240px; height: 240x;" 
        data-title="Behavioral Index" 
        data-description="">
   </div>
@@ -112,7 +112,7 @@
   <h2 id="modal-title">Standard Behavioral Index</h2>
 
   <div class="tabs">
-    <div class="tab active" data-tab="impulse">Impulse</div>
+    <div class="tab active" data-tab="impulse">Components</div>
     <div class="tab" data-tab="horizontal">Horizontal</div>
     <div class="tab" data-tab="orthogonal">Orthogonal</div>
     <div class="tab" data-tab="absolute">Absolute</div>
@@ -133,47 +133,47 @@
 
   <!-- Horizontal Thinking -->
   <div id="horizontal" class="tab-content">
-    <p><strong>1st – One to self</strong></p>
+    <p><strong>1st Characteristic – One to self</strong></p>
     <p>Standard: Silent Identification</p>
     <p>Nonstandard: Dissociation</p>
     <p>Disease: Schizophrenia</p>
     <hr>
-    <p><strong>2nd – One to self</strong></p>
+    <p><strong>2nd Characteristic – One to self</strong></p>
     <p>Standard: Silent Interaction</p>
     <p>Nonstandard: Intimacy Dysfunction</p>
     <p>Disease: Physical Bipolar</p>
     <hr>
-    <p><strong>3rd – One to self</strong></p>
+    <p><strong>3rd Characteristic – One to self</strong></p>
     <p>Standard: Silent Orientation</p>
     <p>Nonstandard: Compensatory Behavior</p>
-    <p>Disease: OCD/ADD/ADHD, Depression</p>
+    <p>Disease: OCD/ADD/ADHD, Physical Depression</p>
     <hr>
-    <p><strong>4th – One-on-one</strong></p>
+    <p><strong>4th Characteristic – One-on-one</strong></p>
     <p>Standard: Intimate Interaction</p>
     <p>Nonstandard: Reversion</p>
-    <p>Disease: Anxiety, Depression</p>
+    <p>Disease: Anxiety, Relational Depression</p>
     <hr>
-    <p><strong>5th – One-on-one</strong></p>
+    <p><strong>5th Characteristic – One-on-one</strong></p>
     <p>Standard: Intimate Identity</p>
     <p>Nonstandard: Reversion, Deceit, Deferral</p>
     <p>Disease: Personality Disorder, PTSD, Anxiety</p>
     <hr>
-    <p><strong>6th – One-on-one</strong></p>
+    <p><strong>6th Characteristic – One-on-one</strong></p>
     <p>Standard: Intimate Orientation</p>
     <p>Nonstandard: Recursion</p>
-    <p>Disease: Autism</p>
+    <p>Disease: Autism (Positive or Negative)</p>
     <hr>
-    <p><strong>7th – One to many</strong></p>
+    <p><strong>7th Characteristic– One to many</strong></p>
     <p>Standard: Social Interaction</p>
     <p>Nonstandard: Social Intimacy</p>
     <p>Disease: Social Intimacy (Social Bipolar)</p>
     <hr>
-    <p><strong>8th – One to many</strong></p>
+    <p><strong>8th Characteristic – One to many</strong></p>
     <p>Standard: Social Orientation</p>
     <p>Nonstandard: Addiction</p>
     <p>Disease: Addiction</p>
     <hr>
-    <p><strong>9th – One to many</strong></p>
+    <p><strong>9th Characteristic – One to many</strong></p>
     <p>Standard: Social Identity</p>
     <p>Nonstandard: Depersonalization</p>
     <p>Disease: Social Identity Disorder</p>
@@ -224,19 +224,19 @@
 
   <!-- Absolute Thinking -->
   <div id="absolute" class="tab-content">
-    <p><strong>25th – Supersocial (Group)</strong></p>
+    <p><strong>25th Characteristic – Supersocial (Group)</strong></p>
     <p>Standard: Three-Party Shared Intimacy</p>
     <p>Nonstandard: Three-Party Shared Intimacy</p>
     <hr>
-    <p><strong>27th – Supersocial (Group)</strong></p>
+    <p><strong>27th Characteristic – Supersocial (Group)</strong></p>
     <p>Standard: Supersocial Identity</p>
     <p>Nonstandard: Personification / Depersonification</p>
     <hr>
-    <p><strong>54th – Supersocial (Group)</strong></p>
+    <p><strong>54th Characteristic – Supersocial (Group)</strong></p>
     <p>Standard: Supersocial Interaction</p>
     <p>Nonstandard: Conditional Relationship / Disinterest</p>
     <hr>
-    <p><strong>117th – Supersocial (Group)</strong></p>
+    <p><strong>117th Characteristic – Supersocial (Group)</strong></p>
     <p>Standard: Supersocial Orientation</p>
     <p>Nonstandard: Gapping</p>
     <hr>
@@ -288,27 +288,27 @@
     <p>Nonstandard Type: None</p>
     <hr>
     <p><strong>1st Level</strong></p>
+    <p>Standard Type: Circular</p>
     <p>Associated Compressions: 1</p>
     <p>Variables: x</p>
-    <p>Standard Type: Circular</p>
     <p>Nonstandard Type: Disruption</p>
     <hr>
     <p><strong>2nd Level</strong></p>
+    <p>Standard Type: Ovular</p>
     <p>Associated Compressions: 2 (1+1)</p>
     <p>Variables: x2 or [(x1 * x2)]</p>
-    <p>Standard Type: Ovular</p>
     <p>Nonstandard Type: Derangement</p>
     <hr>
     <p><strong>3rd Level</strong></p>
+    <p>Standard Type: Elliptical</p>
     <p>Associated Compressions: 3 (2+1)</p>
     <p>Variables: x3 or [(x2 * x1)]</p>
-    <p>Standard Type: Elliptical</p>
     <p>Nonstandard Type: Illness</p>
     <hr>
     <p><strong>4th Level</strong></p>
+    <p>Standard Type: Incongruent</p>
     <p>Associated Compressions: 4 [(2+(1)+(1)]</p>
     <p>Variables: x4 or [(x2)*(x1)*(x2)]</p>
-    <p>Standard Type: Incongruent</p>
     <p>Nonstandard Type: Disease</p>
   </div>
 
@@ -396,3 +396,4 @@
 
 </body>
 </html>
+
