--- a/index.html
+++ b/index.html
@@ -133,47 +133,47 @@
 
   <!-- Horizontal Thinking -->
   <div id="horizontal" class="tab-content">
-    <p><strong>1st – One to self</strong></p>
+    <p><strong>1st Characteristic – One to self</strong></p>
     <p>Standard: Silent Identification</p>
     <p>Nonstandard: Dissociation</p>
     <p>Disease: Schizophrenia</p>
     <hr>
-    <p><strong>2nd – One to self</strong></p>
+    <p><strong>2nd Characteristic– One to self</strong></p>
     <p>Standard: Silent Interaction</p>
     <p>Nonstandard: Intimacy Dysfunction</p>
     <p>Disease: Physical Bipolar</p>
     <hr>
-    <p><strong>3rd – One to self</strong></p>
+    <p><strong>3rd Characteristic – One to self</strong></p>
     <p>Standard: Silent Orientation</p>
     <p>Nonstandard: Compensatory Behavior</p>
     <p>Disease: OCD/ADD/ADHD, Depression</p>
     <hr>
-    <p><strong>4th – One-on-one</strong></p>
+    <p><strong>4th Characteristic – One-on-one</strong></p>
     <p>Standard: Intimate Interaction</p>
     <p>Nonstandard: Reversion</p>
     <p>Disease: Anxiety, Depression</p>
     <hr>
-    <p><strong>5th – One-on-one</strong></p>
+    <p><strong>5th Characteristic – One-on-one</strong></p>
     <p>Standard: Intimate Identity</p>
     <p>Nonstandard: Reversion, Deceit, Deferral</p>
     <p>Disease: Personality Disorder, PTSD, Anxiety</p>
     <hr>
-    <p><strong>6th – One-on-one</strong></p>
+    <p><strong>6th Characteristic – One-on-one</strong></p>
     <p>Standard: Intimate Orientation</p>
     <p>Nonstandard: Recursion</p>
     <p>Disease: Autism</p>
     <hr>
-    <p><strong>7th – One to many</strong></p>
+    <p><strong>7th Characteristic – One to many</strong></p>
     <p>Standard: Social Interaction</p>
     <p>Nonstandard: Social Intimacy</p>
     <p>Disease: Social Intimacy (Social Bipolar)</p>
     <hr>
-    <p><strong>8th – One to many</strong></p>
+    <p><strong>8th Characteristic – One to many</strong></p>
     <p>Standard: Social Orientation</p>
     <p>Nonstandard: Addiction</p>
     <p>Disease: Addiction</p>
     <hr>
-    <p><strong>9th – One to many</strong></p>
+    <p><strong>9th Characteristic – One to many</strong></p>
     <p>Standard: Social Identity</p>
     <p>Nonstandard: Depersonalization</p>
     <p>Disease: Social Identity Disorder</p>
@@ -228,15 +228,15 @@
     <p>Standard: Three-Party Shared Intimacy</p>
     <p>Nonstandard: Three-Party Shared Intimacy</p>
     <hr>
-    <p><strong>27th – Supersocial (Group)</strong></p>
+    <p><strong>27th Characteristic – Supersocial (Group)</strong></p>
     <p>Standard: Supersocial Identity</p>
     <p>Nonstandard: Personification / Depersonification</p>
     <hr>
-    <p><strong>54th – Supersocial (Group)</strong></p>
+    <p><strong>54th Characteristic– Supersocial (Group)</strong></p>
     <p>Standard: Supersocial Interaction</p>
     <p>Nonstandard: Conditional Relationship / Disinterest</p>
     <hr>
-    <p><strong>117th – Supersocial (Group)</strong></p>
+    <p><strong>117th Characteristic – Supersocial (Group)</strong></p>
     <p>Standard: Supersocial Orientation</p>
     <p>Nonstandard: Gapping</p>
     <hr>
@@ -396,3 +396,4 @@
 
 </body>
 </html>
+
