--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <h1>The Standard Behavioral Index</h1>
+  <hr>
   <meta charset="UTF-8">
   <title>Interactive Standard Behavioral Index</title>
   <style>
@@ -396,3 +398,4 @@
 
 </body>
 </html>
+
